tests/fail/semantic/recursive_atom.cyt
atom A(b: B)
atom B(c: C)
atom C(a: A)


atom Self(s: Self)

// args: --no-colour

// expected stderr:
// error: recursive atom types
//   ┌─ ../tests/fail/semantic/recursive_atom.cyt:3:6
//   │
// 1 │ atom A(b: B)
//   │      - atom is part of a recursive cycle
// 2 │ atom B(c: C)
//   │      - atom is part of a recursive cycle
// 3 │ atom C(a: A)
//   │      ^ atom has infinite size
// 
// error: recursive atom type
//   ┌─ ../tests/fail/semantic/recursive_atom.cyt:6:6
//   │
// 6 │ atom Self(s: Self)
//   │      ^^^^ atom has infinite size